mik-button : fix alignment of icon and text on extra large

--- a/src/components/mik-button/mik-button.css
+++ b/src/components/mik-button/mik-button.css
@@ -75,5 +75,6 @@ button {
 
 .withButtonIcon-xl span {
     position: relative;
-    top: -6px;
+    font-size: 15px;
+    vertical-align: middle;
 }
